--- a/TripCompany.IdentityServer/TripCompany.IdentityServer.csproj
+++ b/TripCompany.IdentityServer/TripCompany.IdentityServer.csproj
@@ -127,6 +127,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Config\Clients.cs" />
     <Compile Include="Config\Users.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
