--- a/TripCompany.IdentityServer/Web.config
+++ b/TripCompany.IdentityServer/Web.config
@@ -4,9 +4,6 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
-  <system.webServer>
-    <modules runAllManagedModulesForAllRequests="true" />
-  </system.webServer>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2"/>
     <httpRuntime targetFramework="4.5.2"/>
@@ -26,7 +23,7 @@
   </system.codedom>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false"/>
-    <modules>
+    <modules runAllManagedModulesForAllRequests="true">
       <remove name="ApplicationInsightsWebTracking"/>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web"
         preCondition="managedHandler"/>
